syntax = "proto3";

option go_package = "pb/book";


message BookRestoreRequest {
    string book_id = 1;
}